# CMakePOCSingle

common_cmake_includes/: dependency-graph.cmake  macros.txt  setup_configurations.cmake
csvs/: TallySchema.tdl  adjclassif.csv  attdtype.csv  budget.csv  cctree.csv  clientrule.csv  cmpexcise.csv  cmpfbt.csv  cmpfeature.csv  cmpgst.csv  cmpgstnsession.csv  cmplbt.csv  cmpmisc.csv  cmpnote.csv  cmprepudfindex.csv  cmpsecurity.csv  cmpst.csv  cmptds.csv  cmpudf.csv  cmpvat.csv  collect.csv  commonobj.csv  company.csv  costcenter.csv  cumulations.csv  currency.csv  deducteetype.csv  exchangeactivity.csv  excisedutyclassif.csv  fbtatype.csv  fbtcat.csv  fields.csv  godown.csv  group.csv  gstclassif.csv  hsnclassif.csv  itclassif.csv  itslab.csv  keymap.csv  lbtclassif.csv  (+26 more)
headers/utillib_static/: myutilclass.h
include/: mstflds.h
src/: CMakeLists.txt  CMakeSettings.json
src/mylib_shared/: CMakeLists.txt  mylibshared.cpp  mylibshared.h
src/mylib_static/: CMakeLists.txt  myclass.cpp  myclass.h
src/theapp/: CMakeLists.txt  main.cpp
src/utillib/: CMakeLists.txt  UTILConfigVersion.cmake.in
src/utillib/include/: myutilclass.h
